[tool.poetry]
name = "pystarter"
version = "0.1.0"
description = "A starter project for python projects. Uses Poetry, taskipy and pytest watch."
authors = ["mathewvaughanwaterfull <mathew@waterfull.io>"]
license = "mathewvaughan <mat@matv.dev>"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymatrix = "^3.0.1"


[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
taskipy = "^1.12.0"
pytest-testmon = "^2.0.12"
pytest = "^7.4.2"
pre-commit = "^3.4.0"
black = "^23.9.1"
isort = "^5.12.0"
mypy = "^1.5.1"
pylint = "^2.17.5"

[tool.taskipy.tasks]
test = "pytest"
install_hooks = "pre-commit install"
watch = 'poetry run ptw --runner "pytest --testmon"'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
